k8s/deployment-mqtt-cilent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sclab-mqtt-client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sclab-mqtt-client
  template:
    metadata:
      labels:
        app: sclab-mqtt-client
    spec:
      containers:
        - name: sclab-mqtt-client
          image: 873379329511.dkr.ecr.ap-northeast-2.amazonaws.com/sclabio/onpremise-mqtt-client:latest
          volumeMounts:
            - name: data-volume
              mountPath: /data
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 250m
            limits:
              cpu: 1000m
      imagePullSecrets:
        - name: sclab-ecr-sec
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: sclab-webapp-pvc
