k8s/deployment-mqtt-broker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sclab-mqtt-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sclab-mqtt-broker
  template:
    metadata:
      labels:
        app: sclab-mqtt-broker
    spec:
      containers:
        - name: sclab-mqtt-broker
          image: 873379329511.dkr.ecr.ap-northeast-2.amazonaws.com/sclabio/onpremise-mqtt-broker:latest
          volumeMounts:
            - name: data-volume
              mountPath: /data
          imagePullPolicy: Always
          ports:
            - containerPort: 1883
            - containerPort: 8883
            - containerPort: 8888
      imagePullSecrets:
        - name: sclab-ecr-sec
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: sclab-webapp-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sclab-mqtt-service
spec:
  selector:
    app: sclab-mqtt-broker
  type: NodePort  
  ports:
    - name: mqtt-port
      port: 1883
      targetPort: 8883
    - name: mqtts-port
      port: 8883
      targetPort: 8883
    - name: mqtt-wss-port
      port: 8888
      targetPort: 8888
