k8s/statefulset-qdrant.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qdrant-statefulset
spec:
  serviceName: "qdrant"
  replicas: 1
  selector:
    matchLabels:
      app: qdrant
  template:
    metadata:
      labels:
        app: qdrant
    spec:
      containers:
      - name: qdrant
        image: qdrant/qdrant:v1.7.0
        ports:
          - containerPort: 6333
        volumeMounts:
          - name: qdrant-persistent-storage
            mountPath: /qdrant/storage
  volumeClaimTemplates:
    - metadata:
        name: qdrant-persistent-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: qdrant
spec:
  clusterIP: None
  selector:
    app: qdrant
  ports:
    - port: 6379
      targetPort: 6379
